# macrobot

./: .env.dist  .gitignore  Dockerfile  README.md  REAMDE_DEV.md  docker-compose.yml  gunicorn_conf.py  main.sh  pyproject.toml  requirements.txt
macrodroid_examples/: Forward_Missed_Call_Example.macro  Forward_SMS_Example.macro  Macrobot_Example.macro
nginx/: macrobot
src/: app.py  main.py
src/nucleo/: __init__.py  config.py
src/nucleo/logging/: __init__.py  context.py  factory.py  formatter.py
src/telegram/: __init__.py  bot.py  commands.py
test/: test.http.dist
